chore: enrich swagger
